# fastapi_project_template

./: .env.example  .gitignore  README.md  docker-compose.yml  tree.ps1
scripts/: build.sh  run.sh  test.sh
src/: Dockerfile  Dockerfile.pip  pyproject.toml  requirements.txt
src/app/: main.py
src/app/api/auth/: api_key.py  basic_auth.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: users_example.py
src/app/core/: config.py
src/app/models/: __init__.py
src/app/schemas/: __init__.py  response.py  user_example.py
src/app/tests/: conftest.py
src/app/tests/api/v1/: test_users.py
src/app/tests/postman/: fastapi_project_template.postman_collection.json  fastapi_project_template_secure.postman_collection
src/app/tests/utils/: headers.py
src/scripts/: format.sh  lint.sh  test.sh
