[tool.poetry]
name = "app"
version = "0.1.0"
description = "fast-api project template"
authors = ["makoit"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "20.3.0"
click = "7.1.2"
fastapi = "0.63.0"
flake8 = "3.8.4"
h11 = "0.11.0"
iniconfig = "1.1.1"
mccabe = "0.6.1"
packaging = "20.8"
pluggy = "0.13.1"
py = "1.10.0"
pycodestyle = "2.6.0"
pydantic = "1.7.3"
pyflakes = "2.2.0"
pyparsing = "2.4.7"
pytest = "6.2.1"
starlette = "0.13.6"
toml = "0.10.2"
typed-ast = "1.4.1"
typing-extensions = "3.7.4.3"
uvicorn = "0.13.2"
requests = "2.25.1"

[tool.poetry.dev-dependencies]
mypy = "0.790"
black = "20.8b1"
isort = "5.6.4"
autoflake = "1.4"
flake8 = "3.8.4"
pytest = "6.2.1"
pytest-cov = "2.10.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
